Fix border not displaying on iPhone

--- a/src/components/Timetable/TimetableTd/timetableTd.module.css
+++ b/src/components/Timetable/TimetableTd/timetableTd.module.css
@@ -1,5 +1,5 @@
 .td {
-    border: solid 0.1px;
+    border: solid 0.75px;
     border-collapse: collapse;
     border-spacing: 0px;
     position: relative;
