--- a/src/components/Timetable/timetable.module.css
+++ b/src/components/Timetable/timetable.module.css
@@ -41,7 +41,7 @@
 }
 
 .th {
-    border: solid 0.5px;
+    border: solid 0.75px;
     height: 11px;
     font-size: 9px;
     text-align: center;
